Fix visible icon's on post(maybe with time this method rendering deleted)

--- a/css/movetext.css
+++ b/css/movetext.css
@@ -416,10 +416,7 @@ html {
 }
 
 .post-img{
-    width: 25rem;
-    /*height: 25rem;*/
-    /*width: 80%;*/
-    /*height: 80%;*/
+    height: 25rem;
 }
 .post-img:first-of-type{
 
